[workspace]
resolver = "2"
members = ["etherip-xdp", "etherip-xdp-common", "etherip-xdp-ebpf"]
default-members = ["etherip-xdp", "etherip-xdp-common"]

[workspace.dependencies]
aya = { version = "0.13.1", default-features = false }
aya-build = { version = "0.1.2", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log = { version = "0.2.1", default-features = false }
aya-log-ebpf = { version = "0.1.1", default-features = false }

anyhow = { version = "1", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["net", "time"] }
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }

[profile.release-ebpf]
inherits = "release"
codegen-units = 1
strip = true
opt-level = 3
lto = true
