[package]
name = "etherip-xdp-common"
version = "0.2.0"
edition = "2021"

authors = ["Menhera.org Developers"]
description = "EtherIP implementation using XDP for Linux, in Rust - common codes."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/menhera-org/etherip-xdp-rs"
homepage = "https://github.com/menhera-org/etherip-xdp-rs"

[features]
default = []
user = ["aya"]

[dependencies]
aya = { workspace = true, optional = true }

[lib]
path = "src/lib.rs"
