[package]
name = "etherip-xdp-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
etherip-xdp-common = { path = "../etherip-xdp-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "etherip-xdp"
path = "src/main.rs"
